--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "contentful": "^4.2.1",
     "dotenv": "^4.0.0",
     "gulp": "^3.9.1",
-    "gulp-handlebars": "^4.0.0"
+    "gulp-mustache": "^2.3.0",
+    "rimraf": "^2.6.1"
   }
 }
